--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/developer-ankitt/Xtream-Text-Converter.git",
+  "homepage": "https://developer-ankitt.github.io/Xtream-Text-Converter/",
   "name": "xtream-text-converter",
   "version": "0.1.0",
   "private": true,
